// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`close.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(false)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(文字)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮
        </span>
        <div>
          <span>
            x
          </span>
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      处理开关事件
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      处理定时关闭事件（3s）
    </span>
  </button>
  <br />
  <br />
  <br />
</DocumentFragment>
`;

exports[`content.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容（字符串）
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div>
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`footer.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <i
      class="t-icon t-icon-more t-size-m"
    />
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义icon
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`offset.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      偏移的信息
    </span>
  </button>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      左上角
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      右上角
    </span>
  </button>
  <br />
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      左下角
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      右下角
    </span>
  </button>
</DocumentFragment>
`;

exports[`plugin.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      信息
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      成功
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      警告
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      错误
    </span>
  </button>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          宽度固定400px
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          文本内容最多支持三行
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条内容为*******************************************************************************
        ***************************************************************************************消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggle.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      自由控制关闭时机
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      点击打开多个消息
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
      style="z-index: 1;"
    >
      点击关闭多个消息
    </span>
  </button>
</DocumentFragment>
`;

exports[`type.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-warning"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-is-success"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-error"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;
